fixed date alignment on related aritlces widget

--- a/styles/css/dm-screen.css
+++ b/styles/css/dm-screen.css
@@ -4845,7 +4845,7 @@ a:hover .page-nav__nav-item__responsive-drop-down-icon:after {
   background-size: 20px 24px;
   height: 24px;
   width: 20px;
-  margin-left: 3px;
+  margin-left: 2px;
 }
 /* line 35, ../sass/partials/page/modules/related-articles-right-rail.scss */
 .related-articles-mobile .related-articles-nav .re-widget-left:active {
@@ -4861,6 +4861,7 @@ a:hover .page-nav__nav-item__responsive-drop-down-icon:after {
 }
 /* line 48, ../sass/partials/page/modules/related-articles-right-rail.scss */
 .related-articles-mobile__item {
+  position: relative;
   display: inline-block;
   padding: 5px 0;
   width: 100%;
@@ -4869,19 +4870,19 @@ a:hover .page-nav__nav-item__responsive-drop-down-icon:after {
   min-height: 150px;
   border-bottom: 1px solid #bebebe;
 }
-/* line 57, ../sass/partials/page/modules/related-articles-right-rail.scss */
+/* line 58, ../sass/partials/page/modules/related-articles-right-rail.scss */
 .related-articles-mobile__item .thumb {
   float: left;
   margin-bottom: 5px;
 }
-/* line 62, ../sass/partials/page/modules/related-articles-right-rail.scss */
+/* line 63, ../sass/partials/page/modules/related-articles-right-rail.scss */
 .related-articles-mobile__item h2.title {
   font-family: 'OpenSans Semibold';
   font-size: 13px !important;
   text-align: left;
   color: black;
 }
-/* line 69, ../sass/partials/page/modules/related-articles-right-rail.scss */
+/* line 70, ../sass/partials/page/modules/related-articles-right-rail.scss */
 .related-articles-mobile__item .description {
   font-family: 'OpenSans Regular';
   font-size: 11px !important;
@@ -4889,17 +4890,21 @@ a:hover .page-nav__nav-item__responsive-drop-down-icon:after {
   color: black;
   margin-bottom: 10px;
 }
-/* line 77, ../sass/partials/page/modules/related-articles-right-rail.scss */
+/* line 78, ../sass/partials/page/modules/related-articles-right-rail.scss */
 .related-articles-mobile__item .date {
   font-size: 11px;
   font-style: italic;
+  position: absolute;
+  bottom: 5px;
+  left: 135px;
 }
-/* line 82, ../sass/partials/page/modules/related-articles-right-rail.scss */
+/* line 86, ../sass/partials/page/modules/related-articles-right-rail.scss */
 .related-articles-mobile__item .main-info {
   float: left;
   width: 55%;
+  height: 100%;
 }
-/* line 87, ../sass/partials/page/modules/related-articles-right-rail.scss */
+/* line 92, ../sass/partials/page/modules/related-articles-right-rail.scss */
 .related-articles-mobile__item .additional-info {
   float: left;
   width: 45%;
