--- a/styles/sass/partials/page/modules/related-articles-right-rail.scss
+++ b/styles/sass/partials/page/modules/related-articles-right-rail.scss
@@ -29,7 +29,7 @@ $module-name: 'related-articles-mobile';
 	    	background-size: 20px 24px;
 	    	height: 24px;
 	      	width: 20px;
-	      	margin-left: 3px;
+	      	margin-left: 2px;
 	    }
 
 	    .re-widget-left:active {
@@ -46,6 +46,7 @@ $module-name: 'related-articles-mobile';
 	}
 	
 	&__item {
+		position: relative;
 		display: inline-block;
 		padding: 5px 0;
 		width: 100%;
@@ -77,11 +78,15 @@ $module-name: 'related-articles-mobile';
 		.date {
 			font-size: 11px;
 			font-style: italic;
+			position: absolute;
+			bottom: 5px;
+			left: 135px;
 		}
 
 		.main-info {
 			float: left;
 			width: 55%;
+			height: 100%;
 		}
 
 		.additional-info {
